up favicon and description

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Fcovid</title>
+  <title>F/COVID by Hackers/Founders and HACKFund</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="F/COVID is the nonprofit arm of Hackers/Founders and HACK Fund, established to deliver technological solutions for the COVID-19 crisis. Our Innovation Challenges are constructed to address healthcare professionals’ urgent needs as they serve on the front lines">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
