--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>F/COVID by Hackers/Founders and HACKFund</title>
   <base href="/">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="F/COVID is the nonprofit arm of Hackers/Founders and HACK Fund, established to deliver technological solutions for the COVID-19 crisis. Our Innovation Challenges are constructed to address healthcare professionals’ urgent needs as they serve on the front lines">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
